--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     display: flex;
     padding: 0 5vw;
     line-height: 100px;
-    font-size: x-large;
+    font-size: 1.5rem;
 }
 .logo h1{
     color: rgb(11, 11, 11);
@@ -26,7 +26,7 @@ nav ul{
     display: flex;
     align-items: center;
     list-style-type: none;
-    font-size: large;
+    font-size: 1.1rem;
 }
 
 nav ul li{
@@ -44,8 +44,8 @@ nav ul li a:hover{
     transition: .5s;
 }
 nav ul p{
-    margin-left: 4vw;
-    padding: 0 30px;
+    margin-left: 1rem;
+    margin-right: 0.5rem;
 }
 nav ul p:hover{
     cursor: pointer;
@@ -203,7 +203,6 @@ footer{
 .contain{
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
 }
 .lst h3{
     color: black !important;
