--- a/style.css
+++ b/style.css
@@ -66,7 +66,16 @@ nav ul button:hover{
     background-color: black;
     color: white;
 }
-
+.checkbtn{
+    font-size: 130px;
+    color: black;
+    float: right;
+    cursor: pointer;
+    line-height: 80px;
+}
+#check{
+    display: none;
+}
 .bg{
     position: absolute;
     z-index: -1; 
@@ -106,7 +115,7 @@ nav ul button:hover{
     padding: 3vh 4vw;
     margin-right: 1vw;
     border-radius: 80px;
-    font-size: 110%;
+    font-size: 1.2rem;
     font-weight: 800;
     color: white;
     background-color: black;
@@ -115,7 +124,7 @@ nav ul button:hover{
     margin-left: 1vw;
     padding: 3vh 4vw;
     border-radius: 80px;
-    font-size: 110%;
+    font-size: 1.2rem;
     font-weight: 800;
 }
 #btn2:hover{
@@ -144,7 +153,7 @@ nav ul button:hover{
 }
 .section-1-container .section-1-column p{
     font-weight: 800;
-    font-size: 3vh;
+    font-size: 1.5rem;
     margin-left: 2vw;
     margin-right: 1vw;
 }
@@ -191,7 +200,7 @@ nav ul button:hover{
 }
 .section-2-container .section-2-column p{
     font-weight: 800;
-    font-size: 3vh;
+    font-size: 1.5rem;
     margin-left: 2vw;
     margin-right: 1vw;
 }
