--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 }
  .section-2-column:hover{
     transform: translateY(-0.5%);
-    box-shadow: 0 4rem 8rem rgba(0,0,0,0.5);
+    transition: 1s;
+    box-shadow: 0 4rem 10rem rgba(0, 0, 0, 0.659);
     cursor: pointer;
 }
 .logo{
@@ -60,6 +61,7 @@ nav ul button{
     border-radius: 25px;
     font-size: large;
     font-weight: 700;
+    background-color: transparent;
 }
 nav ul button:hover{
     cursor: pointer;
@@ -119,6 +121,7 @@ nav ul button:hover{
     border-radius: 80px;
     font-size: 1.2rem;
     font-weight: 800;
+    background-color: transparent;
 }
 #btn2:hover{
     cursor: pointer;
@@ -170,6 +173,7 @@ nav ul button:hover{
     border: 2px solid rgba(225, 220, 220, 0.686); 
     font-size: 110%;
     background-color: white;
+    margin-right: 5px;
 }
 .section-2-container{
     display: flex;
@@ -261,7 +265,7 @@ footer hr{
         flex-wrap: wrap;
     }
     .logo{
-        margin: 0 35%;
+        margin: 0 auto;
     }
     nav ul{
         margin:0 10%;
@@ -297,8 +301,22 @@ footer hr{
     }
 }
 @media(max-width:760px){
+    .content,.content1{
+        font-size: 0.8rem;
+    }
+    .line,.line1{
+        font-size: 0.6rem;
+    }
+    #btn1,#btn2{
+        font-size: 0.7rem;
+        border-radius: 0.8rem;
+    }
     .lst li{
         display: none;
+    }
+    .btn input{
+        padding:0.6rem 2rem ;
+        font-size: 0.9rem;
     }
 }
 @media(max-width:600px){
@@ -310,5 +328,96 @@ footer hr{
     }
     footer hr{
         display: none;
+    }
+}
+@media (max-width:475px){
+    .section-1-container .section-1-column{
+        width:250px;
+        height:300px;
+    }
+    .section-1-container .section-1-column img{
+        height: 175px;
+        width: 200px;
+        margin-bottom: 5px;
+    }
+    .section-1-container .section-1-column p{
+        font-size: 0.9rem;
+    }
+    .section-1-container .section-1-column h3{
+        font-size: 1rem;
+    }
+}
+@media(max-width:470px){
+    nav ul{
+        display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
+
+
+}
+@media(max-width:415px){
+    .section-2-container .section-2-column{
+        width: 300px;
+        height: 300px;
+    }
+    .section-2-container .section-2-column img{
+        height: 175px;
+        width: 250px;
+        margin-bottom: 5px;
+    }
+    .section-2-container .section-2-column p{
+        font-size: 0.9rem;
+    }
+    .section-2-container .section-2-column h3{
+        font-size: 1rem;
+    }
+    .head{width: 170%;}
+    .content{
+        width: 145%;
+    }
+    .line{
+        width: 145%;
+    }
+}
+
+@media(max-width:510px){
+    .content,.content1{
+        font-size: 0.4rem;
+    }
+    .line,.line1{
+        font-size: 0.5rem;
+    }
+    #btn1,#btn2{
+        font-size: 0.4rem;
+        border-radius: 0.6rem;
+    }
+    .btn input{
+        padding:0.4rem 1.2rem ;
+        font-size: 0.7rem;
+    }
+}
+@media(max-width:360px){
+    .content{
+        width: 295%;
+    }
+    .head{
+        width: 250%;
+        font-size: 0.9rem;
+    }
+    .line{
+        width: 275%;
+    }
+}
+@media(max-width:325px){
+    .content{
+        width: 503%;
+    }
+    .head{
+        width: 500%;
+        font-size: 0.9rem;
+    }
+    .line{
+        width: 544%;
     }
 }
